--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /layers/download_archive
 /layers/layer*/*_extra_python_packages/src
 /layers/layer*/*_extra_python_packages/tempolayer*
+/layers/layer*/*_extra_packages/src
+/layers/layer*/*_extra_packages/tempolayer*
