--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -29,4 +29,6 @@ Shapely==1.6.4.post2
 SQLAlchemy==1.2.14
 toolz==0.9.0
 Werkzeug==0.14.1
+xarray==0.12.1
+cfgrib==0.9.6.2
 https://downloads.sourceforge.net/project/matplotlib/matplotlib-toolkits/basemap-1.0.7/basemap-1.0.7.tar.gz#egg=basemap
