--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -26,6 +26,7 @@ pyproj==1.9.5.1
 pyshp==1.2.12
 scikit-learn==0.20.1
 scipy==1.1.0
+seaborn==0.9.0
 Shapely==1.6.4.post2
 SQLAlchemy==1.2.14
 toolz==0.9.0
