feat: upgrade python3 from 3.5.6 to 3.7.3, python2 from 2.7.15 to 2.7.16 and all python requirements
Close: #13

BREAKING CHANGE: basemap is removed, please use cartopy instead

--- a/layers/layer4_python2_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python2_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -5,19 +5,21 @@ GDAL<2.3
 h5py
 netCDF4
 Pillow
-matplotlib
+#matplotlib=2.2.4 does not build for some reason
+matplotlib==2.2.2
 pngquant
 pyshp
 shapely
-scipy
+#We keep scipy<1.2.0 for python2 issue
+scipy<1.2.0
 dask
 toolz
 #geos is python3 only
 lxml
 pycurl
-pyproj
+#We must keep pyproj <=1.9.6 for cython issue with pip 9.0.3 (see https://github.com/pyproj4/pyproj/issues/177)
+pyproj<2.0.0
 SQLAlchemy
-https://downloads.sourceforge.net/project/matplotlib/matplotlib-toolkits/basemap-1.0.7/basemap-1.0.7.tar.gz#egg=basemap
 cdsapi
 #Fiona
 #Dependencies for Fiona which is built separately
