--- a/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
+++ b/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
@@ -1,35 +1,35 @@
-attrs==18.2.0
-cdsapi==0.1.1
-cftime==1.0.0
+attrs==19.1.0
+cdsapi==0.1.4
+certifi==2019.3.9
+cftime==1.0.3.4
 Click==7.0
-click-plugins==1.0.4
+click-plugins==1.1.1
 cligj==0.5.0
 cycler==0.10.0
-Cython==0.28.3
-dask==0.19.0
+Cython==0.29.10
+dask==1.2.2
 enum34==1.1.6
 GDAL==2.2.4
-graphviz==0.10.1
-h5py==2.8.0
-kiwisolver==1.0.1
-lxml==4.2.5
+graphviz==0.11
+h5py==2.9.0
+kiwisolver==1.1.0
+lxml==4.3.4
 matplotlib==2.2.2
 munch==2.3.2
-netCDF4==1.4.2
+netCDF4==1.5.1.2
 palettable==3.1.1
-pandas==0.23.4
-Pillow==5.1.0
+pandas==0.24.2
+Pillow==6.0.0
 pngquant==1.0.6
-pycurl==7.43.0.2
-pyproj==1.9.5.1
-pyshp==1.2.12
-python-dateutil==2.7.3
-pytz==2018.4
-scikit-learn==0.20.1
+pycurl==7.43.0.3
+pyproj==1.9.6
+pyshp==2.1.0
+python-dateutil==2.8.0
+pytz==2019.1
+scikit-learn==0.20.3
 scipy==1.1.0
 seaborn==0.9.0
 Shapely==1.6.4.post2
-SQLAlchemy==1.2.14
-subprocess32==3.5.2
+SQLAlchemy==1.3.5
+subprocess32==3.5.4
 toolz==0.9.0
-https://downloads.sourceforge.net/project/matplotlib/matplotlib-toolkits/basemap-1.0.7/basemap-1.0.7.tar.gz#egg=basemap
