--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -1,6 +1,5 @@
 #there is a bug related to Cython in cftime 1.0.3
 cftime!=1.0.3
-Cython
 GDAL<2.3
 h5py
 netCDF4
@@ -9,15 +8,19 @@ matplotlib
 pngquant
 pyshp
 shapely
-scipy
+#scipy >= 1.2.0 has problems with atlas/lapack/blas on CentOS 6
+#to build on centos 6 with version >= 1.2.0, we would need to build
+#atlas in version >= 3.10.0 (and maybe blas and lapack)
+scipy<1.2.0
 dask
 toolz
 geos
 lxml
 pycurl
-pyproj
+#pyproj>=2.0.0 requires proj4>=6.1.0 but we must keep proj4==5.2.0
+#because of cartopy issue : https://github.com/SciTools/cartopy/issues/1288
+pyproj==1.9.6
 SQLAlchemy
-https://downloads.sourceforge.net/project/matplotlib/matplotlib-toolkits/basemap-1.0.7/basemap-1.0.7.tar.gz#egg=basemap
 cdsapi
 #Fiona
 #Dependencies for Fiona which is built separately
@@ -33,3 +36,4 @@ cfgrib
 xarray
 palettable
 seaborn
+cartopy
