--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -2,27 +2,28 @@ attrs==19.1.0
 Cartopy==0.17.0
 cdsapi==0.1.4
 certifi==2019.3.9
-cfgrib==0.9.7
+cfgrib==0.9.7.1
 cftime==1.0.3.4
 click-plugins==1.1.1
 cligj==0.5.0
 cycler==0.10.0
-dask==1.2.2
-Flask==1.0.3
+dask==2.1.0
+eccodes-python==0.9.2
+Flask==1.1.1
 GDAL==2.2.4
 geos==0.2.2
-graphviz==0.11
+graphviz==0.11.1
 h5py==2.9.0
 itsdangerous==1.1.0
 joblib==0.13.2
 kiwisolver==1.1.0
 lxml==4.3.4
-matplotlib==3.1.0
+matplotlib==3.1.1
 munch==2.3.2
 netCDF4==1.5.1.2
-palettable==3.1.1
+palettable==3.2.0
 pandas==0.24.2
-Pillow==6.0.0
+Pillow==6.1.0
 pngquant==1.0.6
 pycurl==7.43.0.3
 pyproj==1.9.6
@@ -32,6 +33,6 @@ scipy==1.1.0
 seaborn==0.9.0
 Shapely==1.6.4.post2
 SQLAlchemy==1.3.5
-toolz==0.9.0
+toolz==0.10.0
 Werkzeug==0.15.4
-xarray==0.12.1
+xarray==0.12.3
