--- a/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
+++ b/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
@@ -1,26 +1,36 @@
 attrs==19.1.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
 cdsapi==0.1.4
 certifi==2019.3.9
 cftime==1.0.3.4
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
+contextlib2==0.5.5
 cycler==0.10.0
 Cython==0.29.12
 dask==1.2.2
+decorator==4.4.0
 enum34==1.1.6
+funcsigs==1.0.2
 GDAL==2.2.4
 graphviz==0.11.1
 h5py==2.9.0
+ipython-genutils==0.2.0
 kiwisolver==1.1.0
 lxml==4.3.4
 matplotlib==2.2.2
+MetPy==0.10.2
 munch==2.3.2
 netCDF4==1.5.1.2
 palettable==3.2.0
 pandas==0.24.2
+pathlib==1.0.1
 Pillow==6.1.0
+Pint==0.9
 pngquant==1.0.6
+pooch==0.5.2
 pycurl==7.43.0.3
 pyproj==1.9.6
 pyshp==2.1.0
@@ -32,3 +42,5 @@ Shapely==1.6.4.post2
 SQLAlchemy==1.3.5
 subprocess32==3.5.4
 toolz==0.10.0
+traitlets==4.3.2
+xarray==0.11.3
