--- a/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
+++ b/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
@@ -20,6 +20,7 @@ h5py==2.9.0
 ipython-genutils==0.2.0
 kiwisolver==1.1.0
 lxml==4.3.4
+Magics==1.0.6
 matplotlib==2.2.2
 MetPy==0.10.2
 munch==2.3.2
