feat: move netcdf Fortran from mfext to mfextaddon_scientific

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /layers/layer*/*/build
 /layers/download_archive
 /layers/layer*/*_extra_packages/src
+/layers/layer*/cache
 /layers/layer*/*_extra_packages/tempolayer*
 /layers/layer*/*_extra_python_packages/src
 /layers/layer*/*_extra_python_packages/tempolayer*
