feat: add python2/3 ecmwfapi module
Close: #47

--- a/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
+++ b/layers/layer4_python2_scientific/0500_extra_packages/requirements2.txt
@@ -12,6 +12,7 @@ cycler==0.10.0
 Cython==0.29.12
 dask==1.2.2
 decorator==4.4.0
+ecmwf-api-client==1.5.4
 enum34==1.1.6
 funcsigs==1.0.2
 GDAL==2.2.4
