--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,3 +1,4 @@
+aggdraw==1.3.11
 asciitree==0.3.3
 attrs==19.1.0
 Cartopy==0.17.0
@@ -37,8 +38,11 @@ Pillow==6.1.0
 Pint==0.9
 pngquant==1.0.6
 pooch==0.5.2
+pycoast==1.2.3
 pycurl==7.43.0.3
+pydecorate==0.2.1
 pykdtree==1.3.1
+pyorbital==1.5.0
 pyproj==1.9.6
 pyresample==1.13.2
 pyshp==2.1.0
