--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -12,7 +12,7 @@ configobj==5.0.6
 cycler==0.10.0
 dask==2.1.0
 decorator==4.4.0
-eccodes-python==0.9.2
+eccodes-python==0.9.3
 ecmwf-api-client==1.5.4
 fasteners==0.15
 Flask==1.1.1
@@ -25,9 +25,10 @@ itsdangerous==1.1.0
 joblib==0.13.2
 kiwisolver==1.1.0
 lxml==4.3.4
-Magics==1.0.6
+Magics==1.0.11
 matplotlib==3.1.1
 MetPy==0.10.2
+metview==1.3.1
 monotonic==1.5
 munch==2.3.2
 netCDF4==1.5.1.2
