--- a/layers/layer4_python2_scientific/0499_extra_packages/requirements2.txt
+++ b/layers/layer4_python2_scientific/0499_extra_packages/requirements2.txt
@@ -19,7 +19,9 @@ decorator==4.4.0
 ecmwf-api-client==1.5.4
 enum34==1.1.6
 fasteners==0.15
+Fiona==1.8.13
 funcsigs==1.0.2
+GDAL==3.0.2
 graphviz==0.11.1
 h5py==2.9.0
 ipython-genutils==0.2.0
