--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -16,7 +16,9 @@ decorator==4.4.0
 eccodes-python==0.9.3
 ecmwf-api-client==1.5.4
 fasteners==0.15
+Fiona==1.8.13
 Flask==1.1.1
+GDAL==3.0.2
 geos==0.2.2
 graphviz==0.11.1
 h5py==2.9.0
