--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,10 @@ theme:
 repo_url: https://github.com/metwork-framework/mfextaddon_scientific
 repo_name: 'GitHub'
 plugins:
+  - exclude:
+      glob:
+        - "_*.md"
+        - "850-reference/_*.md"
   - macros:
       module_name: mkdocs_main
   - search
@@ -26,9 +30,19 @@ markdown_extensions:
   - pymdownx.magiclink
   - pymdownx.mark
   - pymdownx.smartsymbols
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_div_format
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
   - admonition
   - attr_list
+
+extra_css:
+  - https://unpkg.com/mermaid@8.5.1/dist/mermaid.css
+
+extra_javascript:
+  - https://unpkg.com/mermaid@8.5.1/dist/mermaid.min.js
