--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -18,6 +18,7 @@ fasteners==0.15
 Fiona==1.8.13
 Flask==1.1.1
 GDAL==3.0.2
+geopandas==0.8.1
 geos==0.2.2
 graphviz==0.11.1
 h5py==2.9.0
@@ -49,6 +50,7 @@ pyorbital==1.5.0
 pyproj==2.4.2
 pyresample==1.13.2
 pyshp==2.1.0
+rasterio==1.1.5
 satpy==0.17.1
 scikit-learn==0.21.2
 scipy==1.1.0
