--- a/layers/layer4_python2_scientific/0499_extra_packages/requirements2.txt
+++ b/layers/layer4_python2_scientific/0499_extra_packages/requirements2.txt
@@ -9,6 +9,7 @@ cftime==1.0.3.4
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
+cloudpickle==0.2.1
 configobj==5.0.6
 contextlib2==0.5.5
 cycler==0.10.0
