fix: upgrade MetPy to 0.12.2 for compatibility with Cartopy 0.18 Close: #145

--- a/layers/layer4_python2_scientific/0499_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python2_scientific/0499_extra_packages/requirements-to-freeze.txt
@@ -10,6 +10,7 @@ pyshp
 shapely
 #We keep scipy<1.2.0 for python2 issue
 scipy<1.2.0
+dask[dataframe]
 dask
 toolz
 #geos is python3 only
@@ -46,5 +47,3 @@ cdo
 GDAL
 Fiona
 msgpack
-#cloudpickle for dask[dataframe]
-cloudpickle
