--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements-to-freeze.txt
@@ -11,6 +11,7 @@ shapely
 #to build on centos 6 with version >= 1.2.0, we would need to build
 #atlas in version >= 3.10.0 (and maybe blas and lapack)
 scipy<1.2.0
+dask[dataframe]
 dask
 toolz
 geos
@@ -51,5 +52,3 @@ Fiona
 geopandas
 rasterio
 msgpack
-#cloudpickle for dask[dataframe]
-cloudpickle
