--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -1,3 +1,4 @@
+affine==2.3.0
 aggdraw==1.3.11
 asciitree==0.3.3
 Cartopy==0.18.0
@@ -40,7 +41,7 @@ numcodecs==0.6.3
 palettable==3.2.0
 pandas==0.24.2
 Pillow==7.2.0
-Pint==0.9
+Pint==0.10.1
 pngquant==1.0.6
 pooch==0.5.2
 protobuf==3.12.2
@@ -58,11 +59,12 @@ scikit-learn==0.21.2
 scipy==1.1.0
 seaborn==0.9.0
 Shapely==1.6.4.post2
+snuggs==1.4.7
 SQLAlchemy==1.3.5
 toolz==0.10.0
 traitlets==4.3.2
 trollimage==1.10.1
 trollsift==0.3.3
 Werkzeug==0.15.4
-xarray==0.12.3
+xarray==0.14.1
 zarr==2.3.2
