--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -14,6 +14,8 @@ configobj==5.0.6
 cycler==0.10.0
 dask==2.1.0
 decorator==4.4.0
+Deprecated==1.2.10
+descartes==1.1.0
 eccodes-python==0.9.3
 ecmwf-api-client==1.5.4
 fasteners==0.15
@@ -28,8 +30,10 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
 joblib==0.13.2
 kiwisolver==1.1.0
+locket==0.2.0
 lxml==4.3.4
 Magics==1.0.11
+mapclassify==2.2.0
 matplotlib==3.1.1
 MetPy==0.12.2
 metview==1.3.1
@@ -40,6 +44,7 @@ netCDF4==1.5.1.2
 numcodecs==0.6.3
 palettable==3.2.0
 pandas==0.24.2
+partd==1.1.0
 Pillow==7.2.0
 Pint==0.10.1
 pngquant==1.0.6
@@ -66,5 +71,6 @@ traitlets==4.3.2
 trollimage==1.10.1
 trollsift==0.3.3
 Werkzeug==0.15.4
+wrapt==1.12.1
 xarray==0.14.1
 zarr==2.3.2
