--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -59,6 +59,8 @@ pyproj==2.4.2
 pyresample==1.13.2
 pyshp==2.1.0
 rasterio==1.1.5
+regionmask==0.6.1
+salem==0.3.3
 satpy==0.17.1
 scikit-learn==0.21.2
 scipy==1.1.0
