feat: add ot-batman and dependencies Close: #158

--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements-to-freeze.txt
@@ -52,3 +52,8 @@ descartes
 mapclassify<2.3.0
 salem
 regionmask
+#jsonschema and pathos are dependencies for ot-batman (built in further extrapackage)
+jsonschema
+pathos
+#zipp>=2.0.0 (jsonschema->importlib-metadata dependency) doesn t build (to be investigated)
+zipp<2.0.0
