--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -16,6 +16,7 @@ dask==2.1.0
 decorator==4.4.0
 Deprecated==1.2.10
 descartes==1.1.0
+dill==0.3.3
 eccodes-python==0.9.3
 ecmwf-api-client==1.5.4
 fasteners==0.15
@@ -26,9 +27,11 @@ geopandas==0.8.1
 geos==0.2.2
 graphviz==0.11.1
 h5py==2.9.0
+importlib-metadata==2.0.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 joblib==0.13.2
+jsonschema==3.2.0
 kiwisolver==1.1.0
 locket==0.2.0
 lxml==4.3.4
@@ -39,16 +42,20 @@ MetPy==0.12.2
 metview==1.3.1
 monotonic==1.5
 msgpack==1.0.0
+multiprocess==0.70.11.1
 munch==2.3.2
 netCDF4==1.5.1.2
 numcodecs==0.6.3
 palettable==3.2.0
 pandas==0.24.2
 partd==1.1.0
+pathos==0.2.7
 Pillow==7.2.0
 Pint==0.10.1
 pngquant==1.0.6
 pooch==0.5.2
+pox==0.2.9
+ppft==1.6.6.3
 protobuf==3.12.2
 pycoast==1.2.3
 pycurl==7.43.0.3
@@ -57,6 +64,7 @@ pykdtree==1.3.1
 pyorbital==1.5.0
 pyproj==2.4.2
 pyresample==1.13.2
+pyrsistent==0.17.3
 pyshp==2.1.0
 rasterio==1.1.5
 regionmask==0.6.1
@@ -76,3 +84,4 @@ Werkzeug==0.15.4
 wrapt==1.12.1
 xarray==0.14.1
 zarr==2.3.2
+zipp==1.2.0
