--- a/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_extra_packages/requirements3.txt
@@ -46,12 +46,15 @@ multiprocess==0.70.11.1
 munch==2.3.2
 netCDF4==1.5.1.2
 numcodecs==0.6.3
+opencv-contrib-python-headless==4.2.0.34
+openturns==1.16
+ot-batman==1.9.1
 palettable==3.2.0
 pandas==0.24.2
 partd==1.1.0
 pathos==0.2.7
 Pillow==7.2.0
-Pint==0.10.1
+Pint==0.16.1
 pngquant==1.0.6
 pooch==0.5.2
 pox==0.2.9
@@ -71,7 +74,6 @@ regionmask==0.6.1
 salem==0.3.3
 satpy==0.17.1
 scikit-learn==0.21.2
-scipy==1.1.0
 seaborn==0.9.0
 Shapely==1.6.4.post2
 snuggs==1.4.7
