--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -9,6 +9,7 @@ cfgrib==0.9.7.1
 cftime==1.0.3.4
 click-plugins==1.1.1
 cligj==0.5.0
+climetlab==0.1.2
 cloudpickle==0.2.1
 configobj==5.0.6
 cycler==0.10.0
@@ -17,8 +18,10 @@ decorator==4.4.0
 Deprecated==1.2.10
 descartes==1.1.0
 dill==0.3.3
-eccodes-python==0.9.3
+eccodes==1.0.0
 ecmwf-api-client==1.5.4
+ecmwflibs==0.0.93
+entrypoints==0.3
 fasteners==0.15
 Fiona==1.8.13
 Flask==1.1.1
@@ -37,6 +40,7 @@ locket==0.2.0
 lxml==4.3.4
 Magics==1.0.11
 mapclassify==2.2.0
+Markdown==3.3.3
 matplotlib==3.1.1
 MetPy==0.12.2
 metview==1.3.1
@@ -53,6 +57,7 @@ palettable==3.2.0
 pandas==0.24.2
 partd==1.1.0
 pathos==0.2.7
+pdbufr==0.8.1
 Pillow==7.2.0
 Pint==0.16.1
 pngquant==1.0.6
@@ -64,6 +69,7 @@ pycoast==1.2.3
 pycurl==7.43.0.3
 pydecorate==0.2.1
 pykdtree==1.3.1
+pyodc==1.0.3
 pyorbital==1.5.0
 pyproj==2.4.2
 pyresample==1.13.2
@@ -75,10 +81,12 @@ salem==0.3.3
 satpy==0.17.1
 scikit-learn==0.21.2
 seaborn==0.9.0
+setuptools-scm-git-archive==1.1
 Shapely==1.6.4.post2
 snuggs==1.4.7
 SQLAlchemy==1.3.5
 toolz==0.10.0
+tqdm==4.53.0
 traitlets==4.3.2
 trollimage==1.10.1
 trollsift==0.3.3
