feat: add climetlab and dependencies Close: #143

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -54,4 +54,10 @@ opencv-contrib-python-headless
 #May be we should build it from github sources someday...
 openturns
 ot-batman
-climetlab
+#Below requirements for climetlab which is built afterwards
+entrypoints
+Markdown
+pdbufr
+pyodc
+tqdm
+
