--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -5,7 +5,7 @@ Cartopy==0.18.0
 cdo==1.5.3
 cdsapi==0.1.4
 certifi==2019.3.9
-cfgrib==0.9.7.1
+cfgrib==0.9.8.5
 cftime==1.0.3.4
 click-plugins==1.1.1
 cligj==0.5.0
@@ -17,8 +17,9 @@ decorator==4.4.0
 Deprecated==1.2.10
 descartes==1.1.0
 dill==0.3.3
-eccodes-python==0.9.3
+eccodes==1.0.0
 ecmwf-api-client==1.5.4
+entrypoints==0.3
 fasteners==0.15
 Fiona==1.8.13
 Flask==1.1.1
@@ -35,8 +36,9 @@ jsonschema==3.2.0
 kiwisolver==1.1.0
 locket==0.2.0
 lxml==4.3.4
-Magics==1.0.11
+Magics==1.5.5
 mapclassify==2.2.0
+Markdown==3.3.3
 matplotlib==3.1.1
 MetPy==0.12.2
 metview==1.3.1
@@ -53,6 +55,7 @@ palettable==3.2.0
 pandas==0.24.2
 partd==1.1.0
 pathos==0.2.7
+pdbufr==0.8.2
 Pillow==7.2.0
 Pint==0.16.1
 pngquant==1.0.6
@@ -64,6 +67,7 @@ pycoast==1.2.3
 pycurl==7.43.0.3
 pydecorate==0.2.1
 pykdtree==1.3.1
+pyodc==1.0.3
 pyorbital==1.5.0
 pyproj==2.4.2
 pyresample==1.13.2
@@ -79,6 +83,7 @@ Shapely==1.6.4.post2
 snuggs==1.4.7
 SQLAlchemy==1.3.5
 toolz==0.10.0
+tqdm==4.53.0
 traitlets==4.3.2
 trollimage==1.10.1
 trollsift==0.3.3
