--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -18,6 +18,7 @@ pyproj==2.4.2
 SQLAlchemy
 cdsapi
 #Upgrade pandas to 1.x.x ?
+#pandas 0.x doesn't build against numpy >= 1.19
 pandas<1.0
 scikit-learn
 graphviz
