--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,5 +1,6 @@
 affine==2.3.0
 aggdraw==1.3.11
+antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
 Cartopy==0.18.0
 cdo==1.5.3
@@ -30,7 +31,6 @@ graphviz==0.11.1
 h5py==2.9.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
-joblib==0.17.0
 jsonschema==3.2.0
 kiwisolver==1.1.0
 locket==0.2.0
@@ -84,6 +84,5 @@ toolz==0.10.0
 traitlets==4.3.2
 trollimage==1.10.1
 trollsift==0.3.3
-Werkzeug==0.15.4
 xarray==0.14.1
 zarr==2.3.2
