--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -37,7 +37,7 @@ locket==0.2.0
 lxml==4.6.3
 Magics==1.5.5
 mapclassify==2.2.0
-matplotlib==3.1.1
+matplotlib==3.1.3
 MetPy==0.12.2
 metview==1.3.1
 monotonic==1.5
@@ -47,8 +47,8 @@ munch==2.3.2
 netCDF4==1.5.1.2
 numcodecs==0.6.3
 opencv-contrib-python-headless==4.2.0.34
-openturns==1.16
-ot-batman==1.9.1
+openturns==1.14
+-e git+https://github.com/thebaptiste/batman.git@1.9.2-develop-mf#egg=ot-batman
 palettable==3.2.0
 pandas==1.2.4
 partd==1.1.0
@@ -75,7 +75,7 @@ rasterio==1.1.5
 regionmask==0.6.1
 salem==0.3.3
 satpy==0.17.1
-scikit-learn==0.21.2
+scikit-learn==0.22.2.post1
 seaborn==0.9.0
 Shapely==1.6.4.post2
 snuggs==1.4.7
