--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -50,7 +50,7 @@ numba==0.50.1
 numcodecs==0.6.3
 opencv-contrib-python-headless==4.2.0.34
 openturns==1.14
--e git+https://github.com/thebaptiste/batman.git@1.9.2-develop-mf#egg=ot-batman
+-e git+https://gitlab.com/cerfacs/batman.git@1.9.2-develop-mf#egg=ot-batman
 palettable==3.2.0
 pandas==1.2.4
 partd==1.1.0
