--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -66,6 +66,7 @@ protobuf==3.12.2
 pycoast==1.2.3
 pycurl==7.43.0.3
 pydecorate==0.2.1
+pyhdf==0.10.3
 pykdtree==1.3.1
 pyodc==1.0.3
 pyorbital==1.5.0
