--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -31,6 +31,7 @@ graphviz==0.11.1
 h5py==2.9.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jsmin==3.0.0
 jsonschema==3.2.0
 kiwisolver==1.1.0
 llvmlite==0.36.0
@@ -75,6 +76,7 @@ pyproj==2.4.2
 pyresample==1.13.2
 pyrsistent==0.17.3
 pyshp==2.1.0
+pysteps==1.5.0
 rasterio==1.1.5
 regionmask==0.6.1
 salem==0.3.3
