--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -17,9 +17,7 @@ pycurl
 pyproj==2.4.2
 SQLAlchemy
 cdsapi
-#Upgrade pandas to 1.x.x ?
-#pandas 0.x doesn't build against numpy >= 1.19
-pandas<1.0
+pandas
 scikit-learn
 graphviz
 cfgrib
@@ -45,8 +43,7 @@ rasterio
 msgpack
 #descartes and mapclassify : optional geopandas dependencies for polygon plotting
 descartes
-#mapclassify==2.3.0 requires pandas>=1.0
-mapclassify<2.3.0
+mapclassify
 salem
 regionmask
 #We don t want to build opencv-contrib-python-headless from source
@@ -66,3 +63,7 @@ numba
 pyhdf
 pygmt
 pysteps
+distributed
+#tornado, distributed requirement, is also provided by layer python3_devtools
+#but we can't move it in layer python3 because circus (layer python3_circus)
+#requires tornado 4.5.2
