--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -9,26 +9,30 @@ cfgrib==0.9.8.5
 cftime==1.0.3.4
 click-plugins==1.1.1
 cligj==0.5.0
-cloudpickle==0.2.1
+cloudpickle==2.0.0
 configobj==5.0.6
 cycler==0.10.0
-dask==2.1.0
+dask==2021.10.0
 decorator==4.4.0
 Deprecated==1.2.10
 descartes==1.1.0
 dill==0.3.3
+distributed==2021.10.0
 eccodes==1.3.3
 ecmwf-api-client==1.5.4
 entrypoints==0.3
 fasteners==0.15
 ffmpy==0.3.0
+findlibs==0.0.2
 Fiona==1.8.13
 Flask==1.1.1
+fsspec==2021.10.1
 GDAL==3.0.2
 geopandas==0.8.1
 geos==0.2.2
 graphviz==0.11.1
 h5py==3.1.0
+HeapDict==1.0.1
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jsmin==3.0.0
@@ -85,10 +89,14 @@ scikit-learn==0.22.2.post1
 seaborn==0.9.0
 Shapely==1.6.4.post2
 snuggs==1.4.7
+sortedcontainers==2.4.0
 SQLAlchemy==1.3.5
+tblib==1.7.0
 toolz==0.10.0
+tornado==6.0.4
 traitlets==4.3.2
 trollimage==1.10.1
 trollsift==0.3.3
 xarray==0.14.1
 zarr==2.3.2
+zict==2.0.0
