build: update to salem 0.3.6 to allow installation from source tarball

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -25,7 +25,8 @@ cfgrib
 xarray != 0.13.0
 palettable
 seaborn
-cartopy
+#Cartopy 0.20 requires proj 8.0.0
+cartopy < 0.20.0
 eccodes
 MetPy
 Magics
