--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -33,6 +33,7 @@ geos==0.2.2
 graphviz==0.11.1
 h5py==3.1.0
 HeapDict==1.0.1
+imageio==2.13.1
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jsmin==3.0.0
@@ -51,6 +52,7 @@ msgpack==1.0.0
 multiprocess==0.70.11.1
 munch==2.3.2
 netCDF4==1.5.1.2
+networkx==2.6.3
 numba==0.53.1
 numcodecs==0.6.3
 opencv-contrib-python-headless==4.4.0.46
@@ -81,10 +83,12 @@ pyresample==1.13.2
 pyrsistent==0.17.3
 pyshp==2.1.0
 pysteps==1.5.0
+PyWavelets==1.2.0
 rasterio==1.1.5
 regionmask==0.6.1
 salem==0.3.6
 satpy==0.17.1
+scikit-image==0.19.0
 scikit-learn==0.22.2.post1
 seaborn==0.9.0
 Shapely==1.6.4.post2
@@ -92,6 +96,7 @@ snuggs==1.4.7
 sortedcontainers==2.4.0
 SQLAlchemy==1.3.5
 tblib==1.7.0
+tifffile==2021.11.2
 toolz==0.10.0
 tornado==6.0.4
 traitlets==4.3.2
