feat: add reportlab package (python3)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -69,3 +69,4 @@ distributed
 #but we can't move it in layer python3 because circus (layer python3_circus)
 #requires tornado 4.5.2
 scikit-image
+reportlab
