--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements-to-freeze.txt
@@ -1,7 +1,9 @@
-#scipy moved here because pip 18.1 fails to install source distribution ot-batman if scipy is not pre-installed
 scipy
 flit
 pkgconfig
-pythran
+#pythran 0.9.11 because tensorflow 2.5.2 in addon scientific requires gast==0.4.0
+#    and pythran > 0.9.11 requires gast > 0.4.0
+#It will not be necessary with tensorflow 2.8.0
+pythran==0.9.11
 scikit-build
 setuptools-scm-git-archive
