--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -7,6 +7,7 @@ cdo==1.5.3
 cdsapi==0.1.4
 cfgrib==0.9.8.5
 cftime==1.0.3.4
+charset-normalizer==2.0.11
 click-plugins==1.1.1
 cligj==0.5.0
 cloudpickle==2.0.0
@@ -71,6 +72,7 @@ protobuf==3.15.6
 pycoast==1.2.3
 pycurl==7.43.0.3
 pydecorate==0.2.1
+pyepsg==0.4.0
 pygmt==0.4.1
 pyhdf==0.10.3
 pykdtree==1.3.4
