--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ env:
 jobs:
   ci_build:
 
-    runs-on: [self-hosted, metwork]
+    runs-on: [self-hosted, metwork, mfextaddon_scientific]
 
 
     steps:
