--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -70,3 +70,5 @@ cf-units
 scitools-iris
 #pyepsg is an optional dependency of Cartopy 0.18.0 (not used anymore with Cartopy 0.20.0)
 pyepsg
+#statsmodels 0.13.2 requires packaging >= 21.3
+statsmodels==0.13.1
