--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -55,7 +55,6 @@ msgpack==1.0.0
 multiprocess==0.70.11.1
 munch==2.3.2
 netCDF4==1.5.1.2
-networkx==2.6.3
 numba==0.53.1
 numcodecs==0.6.3
 opencv-contrib-python-headless==4.4.0.46
@@ -65,6 +64,7 @@ palettable==3.2.0
 pandas==1.2.4
 partd==1.1.0
 pathos==0.2.7
+patsy==0.5.2
 pdbufr==0.8.2
 Pillow==9.0.1
 Pint==0.16.1
@@ -102,6 +102,7 @@ Shapely==1.6.4.post2
 snuggs==1.4.7
 sortedcontainers==2.4.0
 SQLAlchemy==1.3.5
+statsmodels==0.13.1
 tblib==1.7.0
 tifffile==2021.11.2
 toolz==0.10.0
