--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -2,6 +2,7 @@ affine==2.3.0
 aggdraw==1.3.11
 antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
+bokeh==2.4.2
 Cartopy==0.18.0
 cdo==1.5.3
 cdsapi==0.1.4
