feat: upgrade GDAL to 3.3.3 for compatibility with python 3.9.12

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -37,7 +37,8 @@ pycoast
 pydecorate
 metview
 cdo
-GDAL==3.0.2
+#GDAL < 3.3.0 use invalid use_2to3 (python 3.9.12)
+GDAL>=3.3.0
 Fiona
 geopandas
 rasterio
