feat: upgrade Magics to 4.6.0, pyproj to 3.3.1 and Cartopy to 0.20.2 (also fix ncl build, upgrade pyresample to 1.22.3, all changes needed with proj8 in mfext)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -25,8 +25,7 @@ cfgrib
 xarray != 0.13.0
 palettable
 seaborn
-#Cartopy 0.20 requires proj 8.0.0
-cartopy < 0.20.0
+cartopy
 eccodes
 MetPy
 Magics
