--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -13,8 +13,8 @@ toolz
 geos
 lxml
 pycurl
-#pyproj 2.4.2 is in phase with Proj 6.2.1
-pyproj==2.4.2
+#pyproj 3.3 is compliant with proj 8.2
+pyproj>=3.3.1
 SQLAlchemy
 cdsapi
 pandas
