feat: upgrade gast to 0.5.3, pythran to 0.11.0 and beniget to 0.4.1

--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements-to-freeze.txt
@@ -1,10 +1,7 @@
 scipy
 flit
 pkgconfig
-#pythran 0.9.11 because tensorflow 2.5.2 in addon scientific requires gast==0.4.0
-#    and pythran > 0.9.11 requires gast > 0.4.0
-#It will not be necessary with tensorflow 2.8.0
-pythran==0.9.11
+pythran
 scikit-build
 setuptools-scm-git-archive
 scitools-pyke
