--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -4,10 +4,13 @@ antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
 astropy==5.1
 bokeh==2.4.2
+boltons==21.0.0
+Bottleneck==1.3.4
 Cartopy==0.20.2
 cdo==1.5.3
 cdsapi==0.1.4
 cf-units==3.0.1.post0
+cf-xarray==0.7.2
 cfgrib==0.9.8.5
 cftime==1.5.2
 charset-normalizer==2.0.11
@@ -38,10 +41,12 @@ geos==0.2.2
 graphviz==0.11.1
 h5py==3.1.0
 HeapDict==1.0.1
+icclim==5.2.1
 imageio==2.13.1
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jsmin==3.0.0
+jsonpickle==2.2.0
 jsonschema==3.2.0
 kiwisolver==1.1.0
 llvmlite==0.36.0
@@ -56,7 +61,8 @@ monotonic==1.5
 msgpack==1.0.0
 multiprocess==0.70.11.1
 munch==2.3.2
-netCDF4==1.5.1.2
+mypy-extensions==0.4.3
+netCDF4==1.5.8
 numba==0.53.1
 numcodecs==0.6.3
 opencv-contrib-python-headless==4.4.0.46
@@ -93,6 +99,7 @@ pyshp==2.1.0
 pysteps==1.5.0
 PyWavelets==1.2.0
 rasterio==1.1.5
+rechunker==0.5.0
 regionmask==0.6.1
 reportlab==3.6.3
 salem==0.3.6
@@ -112,6 +119,7 @@ toolz==0.10.0
 tornado==6.0.4
 trollimage==1.10.1
 trollsift==0.3.3
-xarray==0.14.1
+xarray==0.21.1
+xclim==0.36.0
 zarr==2.3.2
 zict==2.0.0
