feat: upgrade Cython to 0.29.30 and numpy to 1.21.6 (we have to wait for a new release of icclim for numpy 1.22)

--- a/layers/layer4_python3_scientific/0498_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0498_prereq_extra_packages/requirements-to-freeze.txt
@@ -1,2 +1,4 @@
-numpy
+#icclim 5.2.1 requires numpy < 1.22 (because of numba)
+#see https://github.com/cerfacs-globc/icclim/issues/190
+numpy<1.22
 pybind11
