--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -9,7 +9,7 @@ Bottleneck==1.3.4
 Cartopy==0.20.2
 cdo==1.5.3
 cdsapi==0.1.4
-cf-units==3.0.1.post0
+cf-units==3.1.1
 cf-xarray==0.7.2
 cfgrib==0.9.8.5
 cftime==1.5.2
