--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
@@ -1,7 +1,7 @@
 beniget==0.4.1
 docutils==0.16
 extension-helpers==1.0.0
-flit==3.2.0
+flit==3.7.1
 gast==0.5.3
 networkx==2.6.3
 pkgconfig==1.5.5
@@ -10,3 +10,4 @@ scikit-build==0.12.0
 scipy==1.7.3
 scitools-pyke==1.1.1
 setuptools-scm-git-archive==1.1
+tomli_w==1.0.0
