feat: upgrade Cartopy, xarray, matplotlib and dependencies

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -11,10 +11,8 @@ shapely
 #dask[array] install dask and required dependencies for module dask.array
 #dask[dataframe] install dask and required dependencies for module dask.dataframe
 #dask[distributed] install dask and required dependencies for module dask.distributed
-dask
-dask[dataframe]
-dask[array]
-dask[distributed]
+#dask[complete] install everything
+dask[complete]
 toolz
 geos
 lxml
