--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
@@ -1,9 +1,11 @@
-docutils==0.16
+cppy==1.2.1
+docutils==0.19
 extension-helpers==1.0.0
-flit==3.7.1
-networkx==2.6.3
+flit==3.8.0
+networkx==2.8.8
 pkgconfig==1.5.5
-scipy==1.9.2
+scipy==1.9.3
 scitools-pyke==1.1.1
-setuptools-scm-git-archive==1.1
+setuptools-scm-git-archive==1.4
 tomli_w==1.0.0
+versioneer==0.28
