--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -1,5 +1,4 @@
-#there is a bug related to Cython in cftime 1.0.3
-cftime!=1.0.3
+cftime
 h5py
 netCDF4
 Pillow
@@ -60,7 +59,8 @@ ffmpy
 -e git+https://gitlab.com/cerfacs/batman.git#egg=ot-batman
 numba
 pyhdf
-pygmt
+#pygmt>=0.6.0 requires GMT>=6.3
+pygmt<0.6.0
 pysteps
 distributed
 #tornado, distributed requirement, is also provided by layer python3_devtools
@@ -71,13 +71,21 @@ reportlab
 climetlab
 pygraphviz
 cf-units
+#scitools-iris 3.3.1 doesn't build with setuptoools<64, so we allow binary
 scitools-iris
 #pyepsg is an optional dependency of Cartopy 0.18.0 (not used anymore with Cartopy 0.20.0)
 pyepsg
 #statsmodels 0.13.2 requires packaging >= 21.3
 statsmodels==0.13.1
-bokeh
+#bokeh >= 3.0.0 requires setuptools.command.editable_wheel (setuptools >= 64)
+bokeh<3.0.0
 astropy
 icclim
 #protobuf>= 3.20 is not compatible with tensorflow 2.8.x
 protobuf<3.20.0
+#cf-units require antlr4-python3-runtime==4.7.2
+antlr4-python3-runtime==4.7.2
+#xclim>=0.38.0 requires scipy<1.9
+xclim<=0.37.0
+#xclim 0.37.0 does'nt work with Pint>=0.20, it will be probably ok with xclim>0.37.0 but... see above
+Pint<0.20
