--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,124 +1,135 @@
-affine==2.3.0
-aggdraw==1.3.11
+affine==2.3.1
+aggdraw==1.3.15
 antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
-astropy==5.1
-bokeh==2.4.2
+astropy==5.1.1
+bokeh==2.4.3
 boltons==21.0.0
-Bottleneck==1.3.4
+Bottleneck==1.3.5
+branca==0.3.1
 Cartopy==0.21.0
 cdo==1.5.7
-cdsapi==0.1.4
+cdsapi==0.5.1
 cf-units==3.1.1
-cf-xarray==0.7.4
-cfgrib==0.9.8.5
-cftime==1.5.2
+cf-xarray==0.7.5
+cfgrib==0.9.10.2
+cftime==1.6.2
 click-plugins==1.1.1
 cligj==0.7.2
-climetlab==0.1.2
-cloudpickle==2.0.0
+climetlab==0.10.9
+cloudpickle==2.2.0
 configobj==5.0.6
-contourpy==1.0.5
-cycler==0.10.0
-dask==2021.10.0
+contourpy==1.0.6
+cycler==0.11.0
+dask==2022.10.2
+dateparser==1.1.3
 descartes==1.1.0
-distributed==2021.10.0
+distributed==2022.10.2
+donfig==0.7.0
 eccodes==1.5.0
-ecmwf-api-client==1.5.4
+ecmwf-api-client==1.6.3
 ecmwflibs==0.4.17
-entrypoints==0.3
-fasteners==0.15
+ecmwf-opendata==0.1.1
+entrypoints==0.4
+fasteners==0.18
 ffmpy==0.3.0
 findlibs==0.0.2
-Fiona==1.8.21
+Fiona==1.8.22
 Flask==2.2.2
-fonttools==4.37.4
-fsspec==2021.10.1
-GDAL==3.3.3
-geopandas==0.11.1
-geos==0.2.2
-graphviz==0.11.1
-h5py==3.1.0
+fonttools==4.38.0
+fsspec==2022.11.0
+GDAL==3.5.3
+geopandas==0.12.1
+geos==0.2.3
+graphviz==0.20.1
+greenlet==2.0.1
+h5py==3.7.0
 HeapDict==1.0.1
-icclim==5.2.2
-imageio==2.13.1
+icclim==5.4.0
+imageio==2.22.4
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
-jsmin==3.0.0
+jsmin==3.0.1
 jsonpickle==2.2.0
-jsonschema==3.2.0
-kiwisolver==1.1.0
+jsonschema==4.17.0
+kiwisolver==1.4.4
 llvmlite==0.39.1
-locket==0.2.0
+locket==1.0.0
 lxml==4.9.1
 Magics==1.5.8
-mapclassify==2.2.0
-matplotlib==3.6.1
-MetPy==0.12.2
-metview==1.13.0
-monotonic==1.5
-msgpack==1.0.0
-multiprocess==0.70.13
-munch==2.3.2
+mapclassify==2.4.3
+matplotlib==3.6.2
+MetPy==1.3.1
+metview==1.13.1
+monotonic==1.6
+msgpack==1.0.4
+multiprocess==0.70.14
+multiurl==0.1.1
+munch==2.5.0
 mypy-extensions==0.4.3
-netCDF4==1.5.8
-numba==0.56.3
-numcodecs==0.6.3
+netCDF4==1.6.2
+numba==0.56.4
+numcodecs==0.10.2
 opencv-contrib-python-headless==4.6.0.66
-openturns==1.18
+openturns==1.20.post3
 -e git+https://gitlab.com/cerfacs/batman.git@1.9.2-develop-mf#egg=ot-batman
-palettable==3.2.0
-pandas==1.4.2
-partd==1.1.0
-pathos==0.2.7
-patsy==0.5.2
-pdbufr==0.8.2
-Pillow==9.0.1
-Pint==0.16.1
+palettable==3.3.0
+pandas==1.5.1
+partd==1.3.0
+pathos==0.3.0
+patsy==0.5.3
+pdbufr==0.9.0
+Pillow==9.3.0
+Pint==0.19.2
 pngquant==1.0.7
-pooch==0.5.2
-pox==0.2.9
-ppft==1.6.6.3
+pooch==1.6.0
+pox==0.3.2
+ppft==1.7.6.6
 protobuf==3.19.5
-pycoast==1.2.3
-pycurl==7.44.1
-pydecorate==0.2.1
+pycoast==1.6.1
+pycurl==7.45.1
+pydecorate==0.3.3
 pyepsg==0.4.0
 pyerfa==2.0.0.1
-pygmt==0.4.1
-pygraphviz==1.6
-pyhdf==0.10.3
-pykdtree==1.3.4
-pyodc==1.1.1
-pyorbital==1.5.0
+pygmt==0.5.0
+pygraphviz==1.10
+pyhdf==0.10.5
+pykdtree==1.3.6
+pyodc==1.1.4
+pyorbital==1.7.3
 pyproj==3.4.0
-pyresample==1.22.3
-pyrsistent==0.17.3
-pyshp==2.1.0
-pysteps==1.5.0
-PyWavelets==1.2.0
-rasterio==1.3.0
+pyresample==1.25.1
+pyrsistent==0.19.2
+pyshp==2.3.1
+pysteps==1.7.1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+rasterio==1.3.4
 rechunker==0.5.0
-regionmask==0.6.1
-reportlab==3.6.3
-salem==0.3.6
-satpy==0.20.0
-scikit-image==0.19.0
-scikit-learn==0.22.2.post1
-scitools-iris==2.4.0
-seaborn==0.9.0
+regionmask==0.9.0
+reportlab==3.6.12
+salem==0.3.8
+satpy==0.38.0
+scikit-image==0.19.3
+scikit-learn==1.1.3
+scitools-iris==3.3.1
+seaborn==0.12.1
 Shapely==1.8.5.post1
 snuggs==1.4.7
 sortedcontainers==2.4.0
-SQLAlchemy==1.3.5
-statsmodels==0.13.1
+SQLAlchemy==1.4.44
+statsmodels==0.13.5
 tblib==1.7.0
-tifffile==2021.11.2
-toolz==0.10.0
+threadpoolctl==3.1.0
+tifffile==2022.10.10
+toolz==0.12.0
 tornado==6.0.4
-trollimage==1.11.0
-trollsift==0.3.3
-xarray==2022.10.0
+trollimage==1.19.0
+trollsift==0.4.0
+tzdata==2022.6
+tzlocal==4.2
+xarray==2022.11.0
 xclim==0.37.0
-zarr==2.3.2
-zict==2.0.0
+xxhash==3.1.0
+zarr==2.13.3
+zict==2.2.0
