feat: downgrade gast to 0.4.0 for compatibility with tensorflow 2.9.3

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -79,7 +79,7 @@ statsmodels
 bokeh<3.0.0
 astropy
 icclim
-#protobuf>= 3.20 is not compatible with tensorflow 2.8.x
+#protobuf>= 3.20 is not compatible with tensorflow <= 2.11.0
 protobuf<3.20.0
 #cf-units require antlr4-python3-runtime==4.7.2
 antlr4-python3-runtime==4.7.2
