--- a/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements-to-freeze.txt
@@ -1,6 +1,11 @@
+#tensorflow 2.9.3 requires gast<=0.4.0
+#beniget 0.4.0 requires gast~=0.4.0
+beniget<0.4.0
+gast<=0.4.0
 meson-python
 ninja
 numpy
 pybind11
 pyproject_metadata
-pythran
+#pythran >=0.9.12 requires gast~=0.5.0
+pythran<0.9.12
