--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -3,6 +3,7 @@ aggdraw==1.3.15
 antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
 astropy==5.1.1
+beautifulsoup4==4.11.1
 bokeh==2.4.3
 boltons==21.0.0
 Bottleneck==1.3.5
@@ -97,6 +98,7 @@ pyhdf==0.10.5
 pykdtree==1.3.6
 pyodc==1.1.4
 pyorbital==1.7.3
+pyoscar==0.4.0
 pyproj==3.4.0
 pyresample==1.25.1
 pyrsistent==0.19.2
@@ -117,6 +119,7 @@ seaborn==0.12.1
 Shapely==1.8.5.post1
 snuggs==1.4.7
 sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 SQLAlchemy==1.4.44
 statsmodels==0.13.5
 tblib==1.7.0
