--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements3.txt
@@ -2,6 +2,7 @@ cppy==1.2.1
 docutils==0.19
 extension-helpers==1.0.0
 flit==3.8.0
+maturin==0.14.10
 networkx==2.8.8
 pkgconfig==1.5.5
 scipy==1.9.3
