--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -21,6 +21,7 @@ climetlab==0.10.9
 cloudpickle==2.2.0
 configobj==5.0.6
 contourpy==1.0.6
+cramjam==2.6.2
 cycler==0.11.0
 dask==2022.11.1
 dateparser==1.1.4
@@ -33,6 +34,7 @@ ecmwflibs==0.4.17
 ecmwf-opendata==0.1.1
 entrypoints==0.4
 fasteners==0.18
+fastparquet==2023.1.0
 ffmpy==0.3.0
 findlibs==0.0.2
 Fiona==1.8.22
@@ -83,10 +85,12 @@ pdbufr==0.9.0
 Pillow==9.3.0
 Pint==0.19.2
 pngquant==1.0.7
+polars==0.15.16
 pooch==1.6.0
 pox==0.3.2
 ppft==1.7.6.6
 protobuf==3.19.6
+pyarrow==10.0.1
 pycoast==1.6.1
 pycurl==7.45.1
 pydecorate==0.3.3
