--- a/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements-to-freeze.txt
@@ -4,7 +4,9 @@ beniget<0.4.0
 gast<=0.4.0
 meson-python
 ninja
-numpy
+#restore numpy build here when numba 0.57 will be available
+#(we will be able to use numpy>=1.24 without problem with option --no-build-isolation)
+#numpy
 pybind11
 pyproject_metadata
 #pythran >=0.9.12 requires gast~=0.5.0
