--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -70,6 +70,7 @@ multiprocess==0.70.14
 multiurl==0.1.1
 munch==2.5.0
 mypy-extensions==0.4.3
+nco==1.0.0
 netCDF4==1.6.2
 numba==0.56.4
 numcodecs==0.10.2
