feat: add python packages folium, pyogrio, plotly and rtree

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -92,3 +92,8 @@ fastparquet
 polars
 pyarrow
 nco
+plotly
+rtree
+pyogrio
+#folium 0.14.0 requires branca >= 0.6.0 but climetlab requires branca==0.3.1
+folium<=0.13.0
