--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -39,6 +39,7 @@ ffmpy==0.3.0
 findlibs==0.0.2
 Fiona==1.8.22
 Flask==2.2.2
+folium==0.13.0
 fonttools==4.38.0
 fsspec==2022.11.0
 GDAL==3.5.3
@@ -85,6 +86,7 @@ patsy==0.5.3
 pdbufr==0.9.0
 Pillow==9.3.0
 Pint==0.19.2
+plotly==5.13.0
 pngquant==1.0.7
 polars==0.15.16
 pooch==1.6.0
@@ -102,6 +104,7 @@ pygraphviz==1.10
 pyhdf==0.10.5
 pykdtree==1.3.6
 pyodc==1.1.4
+pyogrio==0.5.1
 pyorbital==1.7.3
 pyoscar==0.4.0
 pyproj==3.4.0
@@ -115,6 +118,7 @@ rasterio==1.3.4
 rechunker==0.5.0
 regionmask==0.9.0
 reportlab==3.6.12
+rtree==1.0.1
 salem==0.3.8
 satpy==0.38.0
 scikit-image==0.19.3
@@ -128,6 +132,7 @@ soupsieve==2.3.2.post1
 SQLAlchemy==1.4.44
 statsmodels==0.13.5
 tblib==1.7.0
+tenacity==8.2.1
 threadpoolctl==3.1.0
 tifffile==2022.10.10
 toolz==0.12.0
