--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -58,6 +58,7 @@ jsonpickle==2.2.0
 jsonschema==4.17.0
 kiwisolver==1.4.4
 llvmlite==0.39.1
+lmoments3==1.0.5
 locket==1.0.0
 lxml==4.9.1
 Magics==1.5.8
@@ -84,7 +85,7 @@ pathos==0.3.0
 patsy==0.5.3
 pdbufr==0.9.0
 Pillow==9.3.0
-Pint==0.19.2
+Pint==0.20.1
 plotly==5.13.0
 pngquant==1.0.7
 polars==0.15.16
@@ -141,7 +142,7 @@ trollsift==0.4.0
 tzdata==2022.6
 tzlocal==4.2
 xarray==2022.11.0
-xclim==0.37.0
+xclim==0.42.0
 xxhash==3.1.0
 zarr==2.13.3
 zict==2.2.0
