build: build scitools-iris from sources

--- a/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0497_prereq_extra_packages/requirements-to-freeze.txt
@@ -1,4 +1,4 @@
-#tensorflow 2.9.3 requires gast<=0.4.0
+#tensorflow 2.12.0 requires gast==0.4.0
 #beniget 0.4.0 requires gast~=0.4.0
 beniget<0.4.0
 gast<=0.4.0
