feat: upgrade GDAL to 3.7.1.1 (compatibility with C library)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -39,8 +39,7 @@ pycoast
 pydecorate
 metview
 cdo
-#GDAL < 3.3.0 use invalid use_2to3 (python 3.9.12)
-GDAL>=3.3.0
+GDAL
 Fiona
 geopandas
 rasterio
