--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,151 +1,155 @@
-affine==2.3.1
-aggdraw==1.3.15
+affine==2.4.0
+aggdraw==1.3.18
 antlr4-python3-runtime==4.7.2
 asciitree==0.3.3
-astropy==5.1.1
-beautifulsoup4==4.11.1
-blinker==1.6.2
-bokeh==2.4.3
-boltons==21.0.0
-Bottleneck==1.3.5
+astropy==5.3.4
+beautifulsoup4==4.12.2
+blinker==1.6.3
+bokeh==3.3.0
+boltons==23.0.0
+Bottleneck==1.3.7
 branca==0.6.0
-Cartopy==0.21.0
+Cartopy==0.22.0
 cdo==1.6.0
 cdsapi==0.6.1
-cf-units==3.1.1
-cf-xarray==0.7.5
-cfgrib==0.9.10.4
 cftime==1.6.2
+cf-units==3.2.0
+cf-xarray==0.8.6
+cfgrib==0.9.10.4
 click-plugins==1.1.1
 cligj==0.7.2
-climetlab==0.16.7
-cloudpickle==2.2.0
+climetlab==0.17.8
+cloudpickle==3.0.0
 -e git+https://github.com/metwork-framework/configobj@5.0.9#egg=configobj
-contourpy==1.0.6
-cramjam==2.6.2
-cycler==0.11.0
-dask==2023.5.1
-dateparser==1.1.4
+contourpy==1.1.1
+cramjam==2.7.0
+cycler==0.12.1
+dask==2023.10.1
+dateparser==1.1.8
 descartes==1.1.0
-distributed==2023.5.1
-donfig==0.7.0
+distributed==2023.10.1
+donfig==0.8.1
 eccodes==1.6.1
 ecmwf-api-client==1.6.3
-ecmwflibs==0.5.3
 ecmwf-opendata==0.2.0
+ecmwflibs==0.5.3
 entrypoints==0.4
-fasteners==0.18
-fastparquet==2023.1.0
-ffmpy==0.3.0
-findlibs==0.0.2
-Fiona==1.8.22
-Flask==2.3.2
+fasteners==0.19
+fastparquet==2023.10.1
+ffmpy==0.3.1
+findlibs==0.0.5
+Fiona==1.9.5
+Flask==2.3.3
 folium==0.14.0
-fonttools==4.38.0
-fsspec==2022.11.0
+fonttools==4.43.1
+fsspec==2023.9.2
 GDAL==3.7.2
 geographiclib==2.0
-geopandas==0.12.1
+geopandas==0.14.0
 geos==0.2.3
 graphviz==0.20.1
-greenlet==2.0.1
-h5py==3.9.0
+greenlet==3.0.1
+h5py==3.10.0
 HeapDict==1.0.1
 icclim==6.4.0
-imageio==2.22.4
+imageio==2.31.5
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
 jsmin==3.0.1
-jsonpickle==2.2.0
-jsonschema==4.17.0
-kiwisolver==1.4.4
+jsonpickle==3.0.2
+jsonschema==4.19.2
+kiwisolver==1.4.5
+lazy-loader==0.3
 llvmlite==0.41.1
 lmoments3==1.0.6
 locket==1.0.0
-lxml==4.9.1
+lxml==4.9.3
 Magics==1.5.8
-mapclassify==2.4.3
-matplotlib==3.6.2
-MetPy==1.3.1
+mapclassify==2.6.1
+matplotlib==3.8.0
+MetPy==1.5.1
 metview==1.15.0
 monotonic==1.6
-msgpack==1.0.4
-multiprocess==0.70.14
+msgpack==1.0.7
+multiprocess==0.70.15
 multiurl==0.2.1
-munch==2.5.0
+munch==4.0.0
 nco==1.1.0
-netCDF4==1.6.2
+netCDF4==1.6.4
 numba==0.58.1
-numcodecs==0.11.0
-numpngw==0.1.2
+numcodecs==0.12.1
+numpngw==0.1.3
 opencv-contrib-python-headless==4.8.1.78
-openturns==1.20.post3
+openturns==1.21
 -e git+https://gitlab.com/cerfacs/batman.git@1.9.2-develop-mf#egg=ot-batman
-palettable==3.3.0
-pandas==1.5.1
-partd==1.3.0
-pathos==0.3.0
+palettable==3.3.3
+pandas==2.1.2
+partd==1.4.1
+pathos==0.3.1
 patsy==0.5.3
 pdbufr==0.11.0
-Pillow==10.0.1
-Pint==0.20.1
-plotly==5.13.0
+Pillow==10.1.0
+Pint==0.22
+plotly==5.18.0
 pngquant==1.0.7
-polars==0.15.16
-pooch==1.6.0
-pox==0.3.2
-ppft==1.7.6.6
+polars==0.19.12
+pooch==1.8.0
+pox==0.3.3
+ppft==1.7.6.7
 protobuf==3.20.3
-pyarrow==10.0.1
+pyarrow==14.0.0
 pycoast==1.6.1
-pycurl==7.45.1
-pydecorate==0.3.3
+pycurl==7.45.2
+pydecorate==0.4.0
 pyepsg==0.4.0
-pyerfa==2.0.0.1
-pygmt==0.7.0
-pygraphviz==1.10
+pyerfa==2.0.1.1
+pygmt==0.10.0
+pygraphviz==1.11
 pyhdf==0.11.3
-pykdtree==1.3.6
+pykdtree==1.3.9
 pyodc==1.3.0
-pyogrio==0.5.1
-pyorbital==1.7.3
-pyoscar==0.4.0
+pyogrio==0.7.2
+pyorbital==1.8.0
+pyoscar==0.6.4
 pyproj==3.6.1
-pyresample==1.25.1
-pyrsistent==0.19.2
+pyresample==1.27.1
+pyrsistent==0.20.0
 pyshp==2.3.1
-pysteps==1.7.1
+pysteps==1.7.4
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
-rasterio==1.3.4
-rechunker==0.5.0
-regionmask==0.9.0
-reportlab==3.6.13
-rtree==1.0.1
-salem==0.3.8
-satpy==0.38.0
-scikit-image==0.19.3
-scikit-learn==1.1.3
-scitools-iris==3.3.1
-seaborn==0.12.1
-Shapely==1.8.5.post1
+rasterio==1.3.9
+rechunker==0.5.2
+referencing==0.30.2
+regionmask==0.11.0
+reportlab==4.0.6
+rpds-py==0.12.0
+rtree==1.1.0
+salem==0.3.9
+satpy==0.44.0
+scikit-image==0.22.0
+scikit-learn==1.3.2
+scitools-iris==3.7.0
+seaborn==0.13.0
+Shapely==2.0.2
 snuggs==1.4.7
 sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.44
-statsmodels==0.13.5
-tblib==1.7.0
-tenacity==8.2.1
-threadpoolctl==3.1.0
-tifffile==2022.10.10
+soupsieve==2.5
+SQLAlchemy==2.0.23
+statsmodels==0.14.0
+tblib==3.0.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tifffile==2023.9.26
 toolz==0.12.0
 tornado==6.3.3
-trollimage==1.19.0
-trollsift==0.4.0
-tzdata==2022.6
-tzlocal==4.2
-xarray==2022.11.0
+trollimage==1.21.0
+trollsift==0.5.1
+tzdata==2023.3
+tzlocal==5.2
+xarray==2023.10.1
 xclim==0.43.0
-xxhash==3.1.0
-zarr==2.13.3
-zict==2.2.0
+xxhash==3.4.1
+xyzservices==2023.10.0
+zarr==2.16.1
+zict==3.0.0
