build: reorganize build order (cf-xarray pre-requires xarray)

--- a/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0499_prereq_extra_packages/requirements-to-freeze.txt
@@ -5,6 +5,8 @@ setuptools-scm-git-archive
 scitools-pyke
 extension-helpers
 cppy
-versioneer
 maturin
 py-cpuinfo
+#xarray is pre-required to build cf-xarray with --no-build-isolation
+xarray
+pandas
