feat: add python package windrose

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -90,3 +90,4 @@ geographiclib
 #tornado, distributed requirement, is also provided by layer python3_devtools
 #but we can't move it in layer python3 because circus (layer python3_circus)
 #requires tornado < 6
+windrose
