feat: add openpyxl, xlsxwriter and odswriter

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -91,3 +91,6 @@ geographiclib
 #but we can't move it in layer python3 because circus (layer python3_circus)
 #requires tornado < 6
 windrose
+openpyxl
+xlsxwriter
+odswriter
