feat: Upgrade from Python 3.11.9 to Python 3.12.3

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -60,7 +60,8 @@ pysteps
 distributed
 scikit-image
 reportlab
-climetlab
+#climetlab >= 0.20.1 do not requires ecwmflibs
+climetlab>=0.20.1
 pygraphviz
 cf-units
 scitools-iris
