build: replace our configobj fork by new release 5.0.9

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -24,7 +24,7 @@ cligj==0.7.2
 climetlab==0.20.1
 cloudpickle==3.0.0
 coloredlogs==15.0.1
--e git+https://github.com/metwork-framework/configobj@5.0.9#egg=configobj
+configobj==5.0.9
 contourpy==1.1.1
 cramjam==2.7.0
 cycler==0.12.1
