--- a/layers/layer5_python3_extratools/0500_extra_packages/requirements3.txt
+++ b/layers/layer5_python3_extratools/0500_extra_packages/requirements3.txt
@@ -1,20 +1,83 @@
 anyio==3.5.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.5.2
+asttokens==2.4.0
+async-lru==2.0.4
+Babel==2.13.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+comm==0.2.2
+debugpy==1.8.7
+defusedxml==0.7.1
 et-xmlfile==1.1.0
+executing==2.0.1
 faicons==0.2.2
+fastjsonschema==2.20.0
+fqdn==1.5.1
+h11==0.13.0
 htmltools==0.5.3
+httpcore==1.0.6
+httpx==0.27.2
+ipykernel==6.29.5
+ipython==8.16.1
+ipywidgets==8.1.5
+isoduration==20.11.0
+jsonpointer==3.0.0
+json5==0.9.25
+jupyter==1.1.1
+jupyter-client==8.6.3
+jupyter-console==6.6.3
+jupyter-core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter-server==2.14.2
+jupyter-server-terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.3
 linkify-it-py==2.0.3
+matplotlib-inline==0.1.6
 mdit-py-plugins==0.4.1
+mistune==3.0.2
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.2.2
+notebook-shim==0.2.4
 odswriter==0.4.0
 openpyxl==3.1.2
+overrides==7.7.0
+pandocfilters==1.5.1
+parso==0.8.3
+pexpect==4.9.0
+pickleshare==0.7.5
+prometheus-client==0.21.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+python-json-logger==2.0.7
 python-multipart==0.0.9
+pyzmq==25.1.1
 questionary==2.0.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+Send2Trash==1.8.3
 shiny==1.0.0
 sniffio==1.2.0
+soupsieve==2.5
+stack-data==0.6.3
 starlette==0.36.3
+terminado==0.18.1
+tinycss2==1.3.0
 uc-micro-py==1.0.3
+uri-template==1.3.0
 uvicorn==0.17.5
 watchfiles==0.24.0
+webcolors==24.8.0
+webencodings==0.5.1
 websockets==13.0.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.13
 xlsxwriter==3.1.9
-
