--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -12,7 +12,7 @@ boltons==23.0.0
 Bottleneck==1.3.7
 branca==0.6.0
 cads_api_client==1.1.0
-Cartopy==0.22.0
+Cartopy==0.24.1
 cdo==1.6.0
 cdsapi==0.7.0
 cftime==1.6.2
@@ -54,11 +54,10 @@ geographiclib==2.0
 geopandas==0.14.4
 geos==0.2.3
 graphviz==0.20.1
-greenlet==3.0.1
+greenlet==3.1.1
 humanfriendly==10.0
 h5py==3.11.0
 HeapDict==1.0.1
-icclim==6.5.0
 imageio==2.31.5
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
@@ -66,36 +65,34 @@ jsmin==3.0.1
 jsonpickle==3.0.2
 kiwisolver==1.4.5
 lazy-loader==0.3
-llvmlite==0.42.0
 lmoments3==1.0.6
 locket==1.0.0
 lru-dict==1.3.0
-lxml==4.9.3
+lxml==5.3.0
 Magics==1.5.8
 mapclassify==2.6.1
 matplotlib==3.8.0
 MetPy==1.5.1
 metview==1.15.0
 monotonic==1.6
-msgpack==1.0.7
+msgpack==1.1.0
 multiprocess==0.70.15
 multiurl==0.2.1
 munch==4.0.0
 nco==1.1.0
 netCDF4==1.6.4
-numba==0.59.1
 numcodecs==0.12.1
 numexpr==2.9.0
 numpngw==0.1.3
 opencv-contrib-python-headless==4.9.0.80
-openturns==1.22
+openturns==1.24rc1
 -e git+https://gitlab.com/cerfacs/batman.git@1.9.2-develop-mf#egg=ot-batman
 palettable==3.3.3
 partd==1.4.1
 pathos==0.3.1
 patsy==0.5.6
 pdbufr==0.11.0
-Pillow==10.3.0
+Pillow==11.0.0
 Pint==0.22
 plotly==5.18.0
 pngquant==1.0.7
@@ -104,7 +101,7 @@ pooch==1.8.0
 pox==0.3.3
 ppft==1.7.6.7
 protobuf==3.20.3
-pyarrow==14.0.1
+pyarrow==18.0.0
 pycoast==1.6.1
 pycurl==7.45.2
 pydecorate==0.4.0
@@ -150,7 +147,6 @@ toolz==0.12.0
 trollimage==1.21.0
 trollsift==0.5.1
 tzlocal==5.2
-xclim==0.47.0
 xxhash==3.4.1
 xyzservices==2023.10.0
 zarr==2.16.1
