feat: bump scikit-image to 0.25.0rc1 and llvmlite to 0.44.0rc1 + skimage dependencies : imagei 2.35.1 & lazy_loader 0.4 (Python 3.13 compatibility)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -94,7 +94,7 @@ FLORIS
 apng
 thermofeel
 #temporarly removed (lack of Python 3.13 support)
-#llvmlite
+llvmlite #temporarly use 0.44.0rc1
 #numba (requiring llvmlite)
 #xclim (requiring numba)
 #icclim (requiring xclim)
