--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -1,4 +1,5 @@
 standard-imghdr==3.13.0
+llvmlite==0.44.0rc1
 affine==2.4.0
 aggdraw==1.3.18
 apng==0.3.4
@@ -60,13 +61,13 @@ greenlet==3.1.1
 humanfriendly==10.0
 h5py==3.11.0
 HeapDict==1.0.1
-imageio==2.31.5
+imageio==2.35.1
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
 jsmin==3.0.1
 jsonpickle==3.0.2
 kiwisolver==1.4.5
-lazy-loader==0.3
+lazy-loader==0.4
 lmoments3==1.0.6
 locket==1.0.0
 lru-dict==1.3.0
@@ -131,7 +132,7 @@ reportlab==4.0.6
 rtree==1.1.0
 salem==0.3.9
 satpy==0.44.0
-scikit-image==0.22.0
+scikit-image==0.25.0rc1
 scikit-learn==1.5.0
 scitools-iris==3.10.0
 seaborn==0.13.0
