feat: add python-pptx and Aspose.slides

--- a/layers/layer5_python3_extratools/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer5_python3_extratools/0500_extra_packages/requirements-to-freeze.txt
@@ -6,5 +6,7 @@ xlsxwriter
 jupyter
 notebook>=7
 jupyter-console
+python-pptx
+Aspose.Slides
 #requirements required in other layers
 #pyzmq #python3_circus
