--- a/layers/layer5_python3_extratools/0500_extra_packages/requirements3.txt
+++ b/layers/layer5_python3_extratools/0500_extra_packages/requirements3.txt
@@ -1,3 +1,4 @@
+Aspose.Slides==24.11.0
 anyio==3.5.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -47,6 +48,7 @@ pandocfilters==1.5.1
 prometheus-client==0.21.0
 python-json-logger==2.0.7
 python-multipart==0.0.9
+python-pptx==1.0.2
 pyzmq==25.1.1
 questionary==2.0.1
 rfc3339-validator==0.1.4
