feat: temporarly remove FLORIS, waiting for numpy 2.0 compatibility (see https://github.com/NREL/floris/issues/1030)

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -88,7 +88,8 @@ windrose
 openpyxl
 xlsxwriter
 odswriter
-FLORIS
+# temporarly remove FLORIS for numpy 2.0 compatibility
+# FLORIS
 #apng seems to be not maintained anymore
 apng
 thermofeel
