feat: add floris (now compliant with numpy 2.0) and dependencies

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -86,8 +86,7 @@ windrose
 openpyxl
 xlsxwriter
 odswriter
-# temporarly remove FLORIS for numpy 2.0 compatibility
-# FLORIS
+FLORIS
 #apng seems to be not maintained anymore
 apng
 thermofeel
