--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -26,6 +26,7 @@ click-plugins==1.1.1
 cligj==0.7.2
 -e git+https://github.com/thebaptiste/climetlab.git@0.24.1#egg=climetlab
 cloudpickle==3.0.0
+coloredlogs==15.0.1
 configobj==5.0.9
 conflator==0.1.5
 contourpy==1.3.1
@@ -63,6 +64,7 @@ Fiona==1.10.1
 Flask==3.0.0
 flexcache==0.3
 flexparser==0.4
+FLORIS==4.3
 folium==0.19.1
 fonttools==4.43.1
 GDAL==3.10.2
@@ -71,10 +73,11 @@ geopandas==1.0.1
 geos==0.2.3
 graphviz==0.20.1
 greenlet==3.1.1
+h5netcdf==1.5.0
 h5py==3.12.1
 hda==2.22
 HeapDict==1.0.1
-h5netcdf==1.5.0
+humanfriendly==10.0
 imageio==2.36.1
 ipython-genutils==0.2.0
 itsdangerous==2.1.2
@@ -100,6 +103,7 @@ nco==1.1.2
 netCDF4==1.7.2
 numba==0.61.0
 numcodecs==0.14.1
+numexpr==2.10.2
 numpngw==0.1.4
 opencv-contrib-python-headless==4.10.0.84
 openturns==1.24
