feat: bump xclim from 0.56.0 to 0.57.0 and add xsdba 0.4.0

--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -71,7 +71,8 @@ astropy
 #icclim (temporarly removed for Python 3.13 compatibility)
 #tensorflow 2.19.0 requires protbuf < 6
 protobuf<6
-xclim
+#note : xclim.sdba has been split from xclim into xsdba
+xclim[extras]
 Pint
 pyoscar
 fastparquet
