--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -174,7 +174,8 @@ trollimage==1.26.0
 trollsift==0.5.3
 tzlocal==5.3.1
 windrose==1.9.2
-xclim==0.56.0
+xclim==0.57.0
+xsdba==0.4.0
 xxhash==3.5.0
 xyzservices==2025.4.0
 yamale==6.0.0
